added details view

--- a/src/app/modules/countries/components/countries-list-view/countries-list-view.component.html
+++ b/src/app/modules/countries/components/countries-list-view/countries-list-view.component.html
@@ -1,4 +1,4 @@
-<app-card [title]="titlePrefix + ' ' + (regionName | firstLetterUppercase)">
+<app-card [title]="titlePrefix + (regionName | firstLetterUppercase)">
   <div class="list-wrapper">
     <app-countries-list [countries]="countries"></app-countries-list>
   </div>
