added header elements

--- a/src/app/shared-modules/header/comonents/header/header.component.html
+++ b/src/app/shared-modules/header/comonents/header/header.component.html
@@ -1,3 +1,6 @@
 <header>
-  <mat-toolbar class="header-toolbar"></mat-toolbar>
+  <mat-toolbar class="header-toolbar" fxLayout="row" fxLayoutAlign="space-between center">
+    <app-logo></app-logo>
+    <app-back-button></app-back-button>
+  </mat-toolbar>
 </header>
