added card header styles

--- a/src/app/shared-modules/card/components/card/card.component.html
+++ b/src/app/shared-modules/card/components/card/card.component.html
@@ -1,7 +1,7 @@
 <mat-card>
-  <mat-card-header>
-    <mat-card-title>{{title}}</mat-card-title>
-  </mat-card-header>
+  <div class="app-card-header">
+    <h2>{{title}}</h2>
+  </div>
   <mat-card-content>
     <ng-content></ng-content>
   </mat-card-content>
