added about me modal

--- a/src/app/shared-modules/footer/components/footer/footer.component.html
+++ b/src/app/shared-modules/footer/components/footer/footer.component.html
@@ -1,3 +1,5 @@
 <footer>
-  <mat-toolbar class="footer-toolbar"></mat-toolbar>
+  <mat-toolbar class="footer-toolbar" fxLayout="row" fxLayoutAlign="end center">
+    <app-about-me-button></app-about-me-button>
+  </mat-toolbar>
 </footer>
