--- a/src/app/shared-modules/card/components/card/card.component.scss
+++ b/src/app/shared-modules/card/components/card/card.component.scss
@@ -1,12 +1,10 @@
 @import "/src/styles/palette";
 
 .app-card-header {
-  height: 35px;
   width: fit-content;
   border-radius: 3px;
   background: $light-pink;
-  padding: 12px 20px;
-  margin-left: 20px;
+  padding: 6px 20px;
   word-wrap: break-word;
-  margin-right: 10px;
+  margin: 0 10px 20px 20px;
 }
