added search input in countries list

--- a/src/app/modules/countries/components/countries-list-view/countries-list-view.component.html
+++ b/src/app/modules/countries/components/countries-list-view/countries-list-view.component.html
@@ -1,5 +1,6 @@
 <app-card [title]="titlePrefix + (regionName | firstLetterUppercase)">
   <div class="list-wrapper">
-    <app-countries-list [countries]="countries"></app-countries-list>
+    <app-search-input class="search-input" (filterChange)="applyFilter($event)"></app-search-input>
+    <app-countries-list [countries]="countries | filter: filter"></app-countries-list>
   </div>
 </app-card>
